Added PDFViewer class to display PDF pages for manual review within the GUI. Added supporting logic for PDFViewer regarding file storage, paths, and logic to track all files that need manual review. Added additional multiprocessing to handle the barcode scanning, recognition, and data tracking before being pumped into database pipeline. Started adding and redoing comments. Organized imports better. Removed unused functions.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
-rapidfuzz
-pytesseract
-numpy
-PyMuPDF
-Pillow
-pyzbar
-opencv-python
+rapidfuzz~=3.12.2
+pytesseract~=0.3.13
+numpy~=1.26.4
+PyMuPDF~=1.25.3
+Pillow~=10.4.0
+pyzbar~=0.1.9
+opencv-python~=4.11.0.86
 web-browser
 tkinter
-customtkinter
+customtkinter~=5.2.2
+DateTime~=5.5
+python-dateutil~=2.9.0.post0
+logging~=0.4.9.6
